Add sleep timer
FEATURE: 443400

--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -35,6 +35,7 @@
         <file alias="StorageSettingsPage.qml">qml/Settings/StorageSettingsPage.qml</file>
         <file alias="SynchronizationSettingsPage.qml">qml/Settings/SynchronizationSettingsPage.qml</file>
         <file alias="BottomToolbar.qml">qml/BottomToolbar.qml</file>
+        <file alias="SleepTimerDialog.qml">qml/SleepTimerDialog.qml</file>
         <file>qtquickcontrols2.conf</file>
         <file alias="logo.svg">../kasts.svg</file>
     </qresource>
