--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -37,5 +37,6 @@
         <file alias="SleepTimerDialog.qml">qml/SleepTimerDialog.qml</file>
         <file>qtquickcontrols2.conf</file>
         <file alias="logo.svg">../kasts.svg</file>
+        <file alias="media-playback-start-cloud">../icons/media-playback-start-cloud.svg</file>
     </qresource>
 </RCC>
