Allow tray icon type to be set (dark, light, colorful)

--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -46,7 +46,8 @@
         <file alias="FilterInlineMessage.qml">qml/FilterInlineMessage.qml</file>
         <file>qtquickcontrols2.conf</file>
         <file alias="logo.svg">../kasts.svg</file>
-        <file alias="kasts-tray.svg">../icons/kasts-tray.svg</file>
+        <file alias="kasts-tray-light.svg">../icons/kasts-tray-light.svg</file>
+        <file alias="kasts-tray-dark.svg">../icons/kasts-tray-dark.svg</file>
         <file alias="media-playback-start-cloud">../icons/media-playback-start-cloud.svg</file>
     </qresource>
 </RCC>
