Update Tobias' mail address

--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -1,4 +1,4 @@
-<!-- SPDX-FileCopyrightText: 2020 Tobias Fella <fella@posteo.de> -->
+<!-- SPDX-FileCopyrightText: 2020 Tobias Fella <tobias.fella@kde.org> -->
 <!-- SPDX-FileCopyrightText: 2021-2023 Bart De Vries <bart@mogwai.be> -->
 <!-- SPDX-License-Identifier: CC0-1.0 -->
 <RCC>
