Implement sorting for queue and episode lists
Also move filter action (menu) from the search bar back into the main toolbar.

BUG: 466855

--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -42,7 +42,7 @@
         <file alias="SleepTimerDialog.qml">qml/SleepTimerDialog.qml</file>
         <file alias="FullScreenImage.qml">qml/FullScreenImage.qml</file>
         <file alias="GlobalSearchField.qml">qml/GlobalSearchField.qml</file>
-        <file alias="SearchFilterBar.qml">qml/SearchFilterBar.qml</file>
+        <file alias="SearchBar.qml">qml/SearchBar.qml</file>
         <file alias="FilterInlineMessage.qml">qml/FilterInlineMessage.qml</file>
         <file alias="logo.svg">../kasts.svg</file>
         <file alias="kasts-tray-light.svg">../icons/kasts-tray-light.svg</file>
