--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -12,6 +12,7 @@
         <file alias="FeedListDelegate.qml">qml/FeedListDelegate.qml</file>
         <file alias="MinimizedPlayerControls.qml">qml/Mobile/MinimizedPlayerControls.qml</file>
         <file alias="MobilePlayerControls.qml">qml/Mobile/MobilePlayerControls.qml</file>
+        <file alias="VolumeSlider.qml">qml/VolumeSlider.qml</file>
         <file alias="FooterBar.qml">qml/Mobile/FooterBar.qml</file>
         <file alias="BottomToolbar.qml">qml/Mobile/BottomToolbar.qml</file>
         <file alias="QueuePage.qml">qml/QueuePage.qml</file>
