--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -36,6 +36,7 @@
         <file alias="SyncPasswordOverlay.qml">qml/SyncPasswordOverlay.qml</file>
         <file alias="SettingsPage.qml">qml/Settings/SettingsPage.qml</file>
         <file alias="GeneralSettingsPage.qml">qml/Settings/GeneralSettingsPage.qml</file>
+        <file alias="StorageDirDialog.qml">qml/Settings/StorageDirDialog.qml</file>
         <file alias="NetworkSettingsPage.qml">qml/Settings/NetworkSettingsPage.qml</file>
         <file alias="StorageSettingsPage.qml">qml/Settings/StorageSettingsPage.qml</file>
         <file alias="SynchronizationSettingsPage.qml">qml/Settings/SynchronizationSettingsPage.qml</file>
